# bluelab-plugins

./: .gitignore  .gitmodules  DAWS-List.txt  EPITAPH.txt  NOTES-git.txt  NOTES.global.txt  README.md  TODO.global.txt  WIP.txt  bl-checkout-submodules-mac.sh  bl-checkout-submodules.sh  bl-replace-nanovg.sh  generate_tags.sh  make-links.sh
BL-Plugins/BL-Morpho/: BL-Morpho.sln  BorderCustomDrawer.cpp  BorderCustomDrawer.h  CMakeLists.txt  CurveView.cpp  CurveView.h  CurveViewAmp.cpp  CurveViewAmp.h  CurveViewPartials.cpp  CurveViewPartials.h  CurveViewPitch.cpp  CurveViewPitch.h  GhostCustomControl2.cpp  GhostCustomControl2.h  GhostCustomDrawer2.cpp  GhostCustomDrawer2.h  GhostSamplesToSpectro2.cpp  GhostSamplesToSpectro2.h  GhostTrack2.cpp  GhostTrack2.h  Makefile  Morpho.cpp  Morpho.h  MorphoFrame7.cpp  MorphoFrame7.h  MorphoFrameAna2.cpp  MorphoFrameAna2.h  MorphoFrameAnalyzer.cpp  MorphoFrameAnalyzer.h  MorphoFrameAnalyzerFftObj.cpp  MorphoFrameAnalyzerFftObj.h  MorphoFrameSynth2.cpp  MorphoFrameSynth2.h  MorphoFrameSynthetizer.cpp  MorphoFrameSynthetizer.h  MorphoFrameSynthetizerFftObj.cpp  MorphoFrameSynthetizerFftObj.h  MorphoMixer.cpp  MorphoMixer.h  MorphoObj.cpp  (+56 more)
BL-Plugins/BL-Morpho/BL-Morpho.xcworkspace/: contents.xcworkspacedata
BL-Plugins/BL-Morpho/config/: BL-Morpho-ios.xcconfig  BL-Morpho-mac.xcconfig  BL-Morpho-web.mk  BL-Morpho-win.props
BL-Plugins/BL-Morpho/installer/: BL-Morpho-orig.pkgproj  BL-Morpho.iss  BL-Morpho.pkgproj  changelog.txt  intro-demo.rtf  intro.rtf  license.rtf  readme-osx.rtf  readme-win-demo.rtf  readme-win.rtf
BL-Plugins/BL-Morpho/projects/: BL-Morpho-aax.vcxproj  BL-Morpho-aax.vcxproj.filters  BL-Morpho-app.vcxproj  BL-Morpho-app.vcxproj.filters  BL-Morpho-vst2.vcxproj  BL-Morpho-vst2.vcxproj.filters  BL-Morpho-vst3.vcxproj  BL-Morpho-vst3.vcxproj.filters  BL-Morpho-wam-controller.mk  BL-Morpho-wam-processor.mk
BL-Plugins/BL-Morpho/projects/BL-Morpho-iOS.xcodeproj/: project.pbxproj
BL-Plugins/BL-Morpho/projects/BL-Morpho-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme
BL-Plugins/BL-Morpho/projects/BL-Morpho-macOS.xcodeproj/: project.pbxproj
BL-Plugins/BL-Morpho/projects/BL-Morpho-macOS.xcodeproj/project.xcworkspace/xcshareddata/: BL-Morpho-macOS.xcscmblueprint
BL-Plugins/BL-Morpho/projects/BL-Morpho-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  VST3 Controller Library.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-VST2.xcscheme  macOS-VST3 (Distributed).xcscheme  macOS-VST3.xcscheme
BL-Plugins/BL-Morpho/resources/: BL-Morpho-AAX-Info.plist  BL-Morpho-AU-Info.plist  BL-Morpho-Pages.xml  BL-Morpho-VST2-Info.plist  BL-Morpho-VST3-Info.plist  BL-Morpho-iOS-AUv3-Info.plist  BL-Morpho-iOS-Info.plist  BL-Morpho-iOS-LaunchScreen.storyboard  BL-Morpho-macOS-AUv3-Info.plist  BL-Morpho-macOS-AUv3Framework-Info.plist  BL-Morpho-macOS-Info.plist  BL-Morpho-macOS-MainMenu.xib  IPlugAUViewController.xib  main.rc  main.rc_mac_dlg
BL-Plugins/BL-Morpho/scripts/: common-mac.xcconfig  make_zip.py  makedist-mac.sh  makedist-web.sh  makedist-win.bat  update_installer_version.py  update_version.py
BL-Plugins/BL-StereoDeReverb/: BL-StereoDeReverb.sln  CMakeLists.txt  Makefile  README.md  RELEASE-NOTES.txt  StereoDeReverb.cpp  StereoDeReverb.h  config.h
BL-Plugins/BL-StereoDeReverb/BL-StereoDeReverb.xcworkspace/: contents.xcworkspacedata
BL-Plugins/BL-StereoDeReverb/config/: BL-StereoDeReverb-ios.xcconfig  BL-StereoDeReverb-mac.xcconfig  BL-StereoDeReverb-web.mk  BL-StereoDeReverb-win.props
BL-Plugins/BL-StereoDeReverb/installer/: BL-StereoDeReverb-orig.pkgproj  BL-StereoDeReverb.iss  BL-StereoDeReverb.pkgproj  changelog.txt  intro-demo.rtf  intro.rtf  known-issues.txt  license.rtf  readme-osx.rtf  readme-win-demo.rtf  readme-win.rtf
BL-Plugins/BL-StereoDeReverb/projects/: BL-StereoDeReverb-aax.vcxproj  BL-StereoDeReverb-aax.vcxproj.filters  BL-StereoDeReverb-app.vcxproj  BL-StereoDeReverb-app.vcxproj.filters  BL-StereoDeReverb-vst2.vcxproj  BL-StereoDeReverb-vst2.vcxproj.filters  BL-StereoDeReverb-vst3.vcxproj  BL-StereoDeReverb-vst3.vcxproj.filters  BL-StereoDeReverb-wam-controller.mk  BL-StereoDeReverb-wam-processor.mk
BL-Plugins/BL-StereoDeReverb/projects/BL-StereoDeReverb-iOS.xcodeproj/: project.pbxproj
BL-Plugins/BL-StereoDeReverb/projects/BL-StereoDeReverb-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme
BL-Plugins/BL-StereoDeReverb/projects/BL-StereoDeReverb-macOS.xcodeproj/: project.pbxproj
BL-Plugins/BL-StereoDeReverb/projects/BL-StereoDeReverb-macOS.xcodeproj/project.xcworkspace/xcshareddata/: BL-StereoDeReverb-macOS.xcscmblueprint
BL-Plugins/BL-StereoDeReverb/projects/BL-StereoDeReverb-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  VST3 Controller Library.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-VST2.xcscheme  macOS-VST3 (Distributed).xcscheme  (+1 more)
BL-Plugins/BL-StereoDeReverb/resources/: BL-StereoDeReverb-AAX-Info.plist  BL-StereoDeReverb-AU-Info.plist  BL-StereoDeReverb-Pages.xml  BL-StereoDeReverb-VST2-Info.plist  BL-StereoDeReverb-VST3-Info.plist  BL-StereoDeReverb-iOS-AUv3-Info.plist  BL-StereoDeReverb-iOS-Info.plist  BL-StereoDeReverb-iOS-LaunchScreen.storyboard  BL-StereoDeReverb-macOS-AUv3-Info.plist  BL-StereoDeReverb-macOS-AUv3Framework-Info.plist  BL-StereoDeReverb-macOS-Info.plist  BL-StereoDeReverb-macOS-MainMenu.xib  IPlugAUViewController.xib  main.rc  main.rc_mac_dlg
BL-Plugins/BL-StereoDeReverb/scripts/: common-mac.xcconfig  make_zip.py  makedist-mac.sh  makedist-web.sh  makedist-win.bat  update_installer_version.py  update_version.py
Libs/fastapprox/fw/template/C/: configure.ac  init  load-config
Libs/fastapprox/fw/template/Cxx/: bootstrap  configure.ac  init  load-config  make-dist  release-ok  source-install
(+5907 files in other folders)
